# raspberry-pi-weather-display

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config-sample.yaml  docker-compose.dev.yml  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
deploy/: weather-display.service
deploy/config/: sprite.config.js
deploy/scripts/: build_sprite.py  install.sh
display/: __init__.py  epaper.py  ui.py
src/rpiweather/: __init__.py  cli.py  config.py  constants.py  controller.py  helpers.py  power.py  remote.py  scheduler.py
src/rpiweather/common/: enums.py
src/rpiweather/config/: settings.py
src/rpiweather/di/: container.py
src/rpiweather/display/: __init__.py  epaper.py  error_ui.py  protocols.py  render.py  ui.py
src/rpiweather/display/utils/: __init__.py  formatting.py  image.py
src/rpiweather/models/: __init__.py  base.py
src/rpiweather/scheduling/: __init__.py  models.py
src/rpiweather/settings/: __init__.py  application.py  user.py
src/rpiweather/system/: __init__.py  power.py  remote.py  status.py
src/rpiweather/system/utils/: __init__.py  battery.py
src/rpiweather/types/: __init__.py  pijuice.py  weather.py
src/rpiweather/utils/: __init__.py  file.py  formatting.py  time.py
src/rpiweather/weather/: __init__.py  air_quality.py  api.py  errors.py  helpers.py  models.py
src/rpiweather/weather/utils/: __init__.py  icons.py  precipitation.py  units.py
static/css/: style.css  weather-icons-wind-override.css  weather-icons-wind.css  weather-icons.css
system/: weather-display.service
system/scripts/: install.sh
templates/: _base.html.j2  _current.html.j2  _forecast_daily.html.j2  _forecast_hourly.html.j2  _header.html.j2  dashboard.html  dashboard.html.j2
tests/: conftest.py  test_air_quality.py  test_api.py  test_battery.py  test_battery_manager.py  test_cli.py  test_config_schema.py  test_context.py  test_epaper.py  test_error_ui.py  test_errors.py  test_models.py  test_power.py  test_protocols.py  test_quiet_hours.py  test_refresh_interval.py  test_render.py  test_scheduler.py  test_settings.py  test_smoke.py  test_stay_awake.py  test_utils_icons.py  test_utils_precipitation.py  test_utils_unit_converter.py
tests/data/: aqi_sample.json  onecall_sample.json
typings/pijuice/: __init__.pyi
weather/: api.py  errors.py  helpers.py
